--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </p>
       <a href="https://github.com/ThaynaFonsec" id="btn-projects"><ion-icon name="git-network"></ion-icon> <span>Ver Projetos</span></a>
       <h2 id="skills-section-title">Minhas Skills</h2>
-      <p id="description">Conheça as tecnologia que domino:</p>
+      <p id="description">Conheça as tecnologias que domino:</p>
 
       <div id="skills-container">
         <div class="skills-box">
